--- a/README
+++ b/README
@@ -235,10 +235,10 @@ is already occupied by a webserver, you will need two additional public IP addre
 One will be listening for Flash Socket (ciphered + unencrypted) on 443. Web Socket
 (unencrypted) will be functional on this port as well. It is reasonable to serve unencrypted
 WebSocket on port 443, because this has a fighting chance of making it through an HTTPS
-CONNECT proxy [3].
+CONNECT proxy [#]_.
 
 If you want Web Socket (SSL), you'll need the second additional IP. This requirement could be
-lifted [5], but it is very low priority.
+lifted [#]_, but it is very low priority.
 
 To summarize port-sharing, SSL and non-SSL listeners cannot share the same port.
 Because Flash Socket (ciphered + unencrypted) is not SSL, it shares the same port as
@@ -246,61 +246,65 @@ WebSocket (unencrypted)
 
 Minerva's web resources (for long-polling/HTTP streaming) should be behind a hardened webserver
 like nginx. Compared to twisted.web, nginx is a bit harder to DoS, handles more compatibility
-problems, and maintains an SSL session cache [4]. These advantages probably
+problems, and maintains an SSL session cache [#]_. These advantages probably
 outweigh the overhead of an open socket for every long-polling/streaming HTTP request.
 In the future, we may move more of Minerva's HTTP functionality into nginx, in the spirit
-of nginx_http_push_module [2]
+of nginx_http_push_module [#]_.
 
 Here is a reasonable setup for a small website:
 
-	nginx listening on ports 80 and 443 on IP0
-		reverse-proxying non-static content on both ports to a Twisted server that
+*	nginx listening on ports 80 and 443 on IP0
+
+	*	reverse-proxying non-static content on both ports to a Twisted server that
 		is serving web resources, one of which is a newlink.HttpFace
 
-	Twisted process running:
-		newlink.HttpFace, listening on a Unix socket or TCP port for upstream
-			proxy (often nginx).
-		newlink.SocketFace, listening on 80, 443, 843, <extra ports> on IP1.
-		newlink.SocketFace + SSL, listening on 80, 443, <extra ports> on IP2.
+*	Twisted process running:
 
-Why listen on port 843? SocketFace serves Flash socket policy files when asked.
-843 is the port where Flash first looks for a Socket master policy file. [6] If Flash
+	*	newlink.HttpFace, listening on a Unix socket or TCP port for upstream
+		proxy (often nginx).
+	*	newlink.SocketFace, listening on 80, 443, 843, <extra ports> on IP1.
+	*	newlink.SocketFace + SSL, listening on 80, 443, <extra ports> on IP2.
+
+Why listen on port 843?
+843 is the port where Flash first looks for a Socket master policy file. [#]_ SocketFace serves Flash socket policy files when asked. If Flash
 player cannot get the policy file from port 843, it will try to get the policy from the
 connection destination port. But by serving the policy on port 843, we reduce the
 time needed to establish the first connection.
 
-	Note: 843 is used for Minerva data transmission as well, but typically only as
-	a fallback. It's not restricted to just serving the policy file.
+Note: 843 is used for Minerva data transmission as well, but typically only as
+a fallback. It's not restricted to just serving the policy file.
 
 Note that Flash Socket cannot connect to the `+ SSL' listener (which right now it is
 only for WebSocket SSL), so we do not need to have a non-SSL SocketFace listen on port 843 on IP2.
 
-Optional <extra ports> for listening:
-	21 (ftp), 22 (ssh), 110 (pop3), 143 (imap), 465 (SMTPs - MS),
+Suggested <extra ports> for listening:
+
+*	21 (ftp), 22 (ssh), 110 (pop3), 143 (imap), 465 (SMTPs - MS),
 	843 (Flash master policy port) 993 (imap+ssl), 995 (pop3+ssl)
 
-	TODO: find which ports are likely to be unblocked by proxies
-	TODO: test if browsers actually connect to these ports when Flash player asks
-
-
 Also, keep in mind that SSL connections will use a lot more memory compared to
-non-SSL connections. [1]
+non-SSL connections. [#]_
 
-TODO: import information about increasing connection limits on Linux, including
-	raising unix socket backlog for Twisted itself
+**TODO:** import information about increasing connection limits on Linux, including
+raising unix socket backlog for Twisted itself
 
-[1] google, "occupancy of ssl connections"
-[2] http://pushmodule.slact.net/
-[3] "Most proxies disable CONNECT to anything but port 443."
-	http://lists.whatwg.org/htdig.cgi/whatwg-whatwg.org/2008-November/017241.html
-[4] See nginx/src/event/ngx_event_openssl.c
-[5] This can be done by using Twisted's support for mem-bio SSL, but exarkun says
+..	[#] "Most proxies disable CONNECT to anything but port 443."
+  	http://lists.whatwg.org/htdig.cgi/whatwg-whatwg.org/2008-November/017241.html
+
+..	[#] This can be done by using Twisted's support for mem-bio SSL, but exarkun says
 	this copies data a lot. An alternate approach would be to use OpenSSL's built-in
 	passthrough of data when the connection doesn't look like SSL. To work with the
 	standard OpenSSL, this might require changing our Minerva protocols a bit to trigger
 	OpenSSL's fallback. This approach is very ugly. See http://twistedmatrix.com/trac/ticket/490
-[6] http://www.adobe.com/devnet/flashplayer/articles/fplayer9_security_04.html
 
+..	[#] See nginx/src/event/ngx_event_openssl.c
+	http://repo.or.cz/w/nginx.git/blob/master:/src/event/ngx_event_openssl.c
+
+..	[#] http://pushmodule.slact.net/
+
+..	[#] http://www.adobe.com/devnet/flashplayer/articles/fplayer9_security_04.html
+
+..	[#] http://google.com/search?hl=en&q=%22occupancy%20of%20ssl%20connections%22%20nginx
 
 
 Producers/consumers
