--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,4 +1,4 @@
-# This is a list of contributors to Coreweb.
+# This is a list of contributors to Minerva.
 
 # Names should be added to this file like so:
 # Name or Organization <email address>
